plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.5'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.Member'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-web-services'
	implementation group: 'com.google.firebase', name: 'firebase-admin', version: '9.3.0'
	implementation 'com.google.cloud:google-cloud-firestore:3.24.3'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	implementation 'io.jsonwebtoken:jjwt:0.12.3'
	implementation 'org.mockito:mockito-core'
	testImplementation 'org.springframework.security:spring-security-test'


	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.mockito:mockito-core:5.4.0'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
	runtimeOnly 'com.mysql:mysql-connector-j'

	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
}

test{
	jvmArgs '-XX:+EnableDynamicAgentLoading'
	jvmArgs '-Xshare:auto'
}

tasks.named('test') {
	useJUnitPlatform()
}
